--- a/index.html
+++ b/index.html
@@ -46,6 +46,30 @@
         </div>
     </section>
 
+    <section class="sec-2">
+
+        <div class="half-width">
+            <img id="second" src="Art.jfif" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Goals</h2>
+                <h2>Become a successful developer</h3>
+                    <p>
+                        My commitment to ongoing learning and professional development is testament to my desire to stay
+                        at the
+                        forefront of
+                        my field. With a strong foundation in programming languages such as HTML, CSS, and JavaScript, I
+                        am well
+                        on
+                        my way
+                        to achieving my goals and creating exciting and innovative web applications.
+                    </p>
+
+                    <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
+
 </body>
 
 </html>
