--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@
         </div>
 
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+
+        <div>
+            <h1>Full Stack Developer</h1>
+            <h3>2020 Present | Pro Level Developer </h3>
+        </div>
+        <div>
+            <h1>Junior Web Developer</h1>
+            <h3>2020-2021 | Programming Hero Learner</h3>
+        </div>
+
+    </section>
+
 
 </body>
 
