--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
+
 </head>
 
 <body>
-    <section>
+    <section class="flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1 class="name"> <span class="span">Tamim Karim's</span> profile</h1>
@@ -46,7 +47,7 @@
         </div>
     </section>
 
-    <section class="sec-2">
+    <section class="sec-2 flexible-container">
 
         <div class="half-width">
             <img id="second" src="Art.jfif" alt="">
@@ -75,10 +76,25 @@
         <div>
             <h1>Full Stack Developer</h1>
             <h3>2020 Present | Pro Level Developer </h3>
+            <p>
+                As a fullstack developer, my technical skills include proficiency in programming languages such as JavaScript, HTML,
+                CSS, and various server-side languages such as PHP, Ruby, or Python. I am well-versed in databases such as MySQL,
+                PostgreSQL, MongoDB, and other SQL and NoSQL technologies. I also possess expertise in front-end development frameworks
+                such as React, Angular, Vue.js, or jQuery, as well as back-end frameworks such as Node.js, Express, Django, or Ruby on
+                Rails.
+                
+                
+            </p>
         </div>
         <div>
             <h1>Junior Web Developer</h1>
             <h3>2020-2021 | Programming Hero Learner</h3>
+            <p>
+                As a front-end developer, I am a highly skilled and sought-after professional, capable of delivering robust and
+                scalable software solutions that meet the needs of clients and end-users alike. My problem-solving skills allow me to
+                troubleshoot and resolve complex technical issues efficiently, making me a valuable team member in any development
+                project.
+            </p>
         </div>
 
     </section>
