--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
             <a class="link-button" target="_blank" href="">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="krista.jfif" alt="">
+            <img id="first-img" src="krista.jfif" alt="">
         </div>
     </section>
 
     <section class="sec-2 flexible-container">
 
         <div class="half-width">
-            <img id="second" src="Art.jfif" alt="">
+            <img id="second-img" src="Art.jfif" alt="">
         </div>
         <div class="half-width">
             <h1>Goals</h2>
-                <h2>Become a successful developer</h3>
+                <h3>Become a successful developer</h3>
                     <p>
                         My commitment to ongoing learning and professional development is testament to my desire to stay
                         at the
@@ -71,10 +71,10 @@
 
     </section>
     <section class="experience-area">
-        <h1>Experiences</h1>
+        <h1 class="exp">Experiences</h1>
 
         <div class="flexible-container">
-            <div class="experience ">
+            <div id="full-stack" class="experience ">
                 <h2>Full Stack Developer</h2>
                 <h3 class="span">2020 Present | Pro Level Developer </h3>
                 <p>
@@ -92,7 +92,7 @@
                 </p>
             </div>
             
-            <div class="experience">
+            <div id="junior-dev" class="experience">
                 <h2>Junior Web Developer</h2>
                 <h3 class="span">2020-2021 | Programming Hero Learner</h3>
                 <p>
@@ -110,5 +110,8 @@
 
 
 </body>
+<footer>
+    <small><p>© 2023 Tamim Karim</p></small>
+</footer>
 
 </html>
