--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="link-button" target="_blank" href="">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img id="first-img" src="krista.jfif" alt="">
+            <img id="first-img" src="17 Batman phone wallpapers.jfif" alt="">
         </div>
     </section>
 
